--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Server
-PORT=3000
+PORT=8080
 
 # Connection
 DB_PORT=3306
-DB_HOST=db
+DB_HOST=localhost
 DB_USERNAME=hamza
 DB_PASSWORD=estia
 DB_NAME=coffeenodejs
